[package]
name = "clipboard"
version = "0.1.0"
authors = ["ippee <ippee.music@gmail.com>"]
edition = "2018"

[lib]
name = "clipboard"
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"